# mindcraft-multi-wm

./: .gitignore  README.md  program.md  pyproject.toml
configs/: default.yaml
dashboard/: components.json  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/snapshot/: route.ts
dashboard/app/viewer/[port]/[[...path]]/: route.ts
dashboard/components/: MindcraftDashboard.tsx
dashboard/lib/: types.ts
docs/: isaac_go2_continual_demo.md
figures/: ASSET_CREDITS.md
mindcraft/: __init__.py  cli.py  config.py  planning.py  progression.py  replay.py  schemas.py  skill_library.py  skills.py  telemetry.py  training_logs.py  world_model.py
mindcraft/robotics/: __init__.py  continual_go2.py
scripts/: isaac_go2_continual_demo.py  replay_multiplexer.py
tests/: test_replay.py  test_replay_multiplexer.py  test_robotics_go2.py  test_skill_library.py  test_telemetry.py  test_training_logs.py  test_world_model.py
